--- a/Html/Form.html
+++ b/Html/Form.html
@@ -37,6 +37,7 @@
             <div>
                 <label for="tel">Tel input type: </label>
                 <input type="tel" id="tel" name="tel">
+                <error-output class="tel-error" for="text"></error-output>
             </div>
             <div>
                 <label for="search"> Search input type:</label>
@@ -84,6 +85,18 @@
         errorEmail.textContent = "";
         else
         errorEmail.textContent = "Invalid email"
+        });
+
+         // UC 3 : Mobile no validation
+         const mobileInput = document.querySelector('#tel');
+        const errorMobile = document.querySelector(".tel-error");
+        mobileInput.addEventListener('input',function()
+        {
+            let mobileRegex = RegExp("^[0-9]{2}[ ]*[0-9]{10}$");
+            if(mobileRegex.test(mobileInput.value))
+            errorMobile.textContent = " ";
+            else
+            errorMobile.textContent = "Invalid number"
         });
     </script>
     </body>
